# template_base

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/: mcp.json
.cursor/agents/: code-reviewer.md  context7-analyzer.md  pyright-scanner.md  test-generator.md
.cursor/rules/: RUL-000-python-development.mdc  RUL-001-python-code-style.mdc  RUL-002-fast-api.mdc  RUL-003-port-adapter.mdc  RUL-004-langgraph.mdc  RUL-005-langchain.mdc  RUL-100-common.mdc  RUL-101-security.mdc  RUL-102-structure.mdc  RUL-103-ai.mdc  RUL-104-mcp-server.mdc  RUL-105-prompt-generation.mdc  RUL-106-testing.mdc  RUL-107-context7-analyze.mdc  RUL-108-database.mdc
.devin/: mcp_config.json
.devin/rules/: RUL-000-python-development.md  RUL-001-python-code-style.md  RUL-002-fast-api.md  RUL-003-port-adapter.md  RUL-004-langgraph.md  RUL-005-langchain.md  RUL-100-common.md  RUL-101-security.md  RUL-102-structure.md  RUL-103-ai.md  RUL-104-mcp-server.md  RUL-105-prompt-generation.md  RUL-106-testing.md  RUL-107-context7-analyze.md  RUL-108-database.md
.devin/workflows/: code-reviewer.md
.gigacode/rules/: RUL-000-python-development.md  RUL-001-python-code-style.md  RUL-002-fast-api.md  RUL-003-port-adapter.md  RUL-004-langgraph.md  RUL-005-langchain.md  RUL-100-common.md  RUL-101-security.md  RUL-102-structure.md  RUL-103-ai.md  RUL-104-mcp-server.md  RUL-105-prompt-generation.md  RUL-106-testing.md  RUL-107-context7-analyze.md  RUL-108-database.md
.scripts/: pyright-scan.py
ai_lint/: runner.py
ai_lint/rules/: llm_calling.py  observability.py  structure.py  tools_calling.py
docs/: ai-runtime-contract.md  rules.md  structure.md
docs/adr/: ADR-000-architecture.md  ADR-001-decision-policy.md  ADR-001-langgraph.md  ADR-001-port-adapter.md  ADR-002-execution.md  ADR-003-ports-and-adapters.md  ADR-004-langgraph.md  ADR-005-retrieval-first.md  ADR-006-caching-strategy.md  ADR-007-observability.md  ADR-009-prompt-versioning.md  ADR-100-trade-offs.md  ADR-101-guardrails.md  ADR-102-observability.md  ADR-103-evaluation.md  ADR-104-prompt-structure.md
docs/architecture/: ARC-000-structure.md  (+5 more)
(+21 files in other folders)
