[project]
name = "app-product-definition"
version = "0.1.0"
description = "Сервис определения банковских продуктов по текстовому запросу пользователя"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.123.0",
    "httpx>=0.28.0",
    "langchain>=1.3.0",
    "langchain-openai>=1.1.0",
    "langchain-community>=0.4.0",
    "langchain-gigachat>=0.5.0",    # Чистый langchain-gigachat
    #"sber-aef-sdk>=0.22.1",         # Целевой SDK (под капотом - langchain-gigachat)
    "pydantic>=2.11.0",
    "pydantic-settings>=2.14.0",
    "uvicorn[standard]>=0.49.0",
    # Database / migrations
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "testcontainers>=4.0.0",
    "respx>=0.21.0",
    "pyright>=1.1.411",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Pyright configuration

[tool.pyright]
typeCheckingMode = "standard"
"reportUnboundVariable" = "information"
"reportImplicitStringConcatenation" = "warning"
exclude = [
    "**/docs",
    "**/prompts",
    "**/.cursor",
    "**/.devin",
    "**/.gigacode",
    "**/.scripts",
    "**/.venv",
    "**/__pycache__",
    "**/.pytest_cache",
    "**/.mypy_cache",
    "**/.git", 
    "**/node_modules", 
    "**/.*",
]
ignore = [
    "uv.lock",
    "README.md",
    ".gitignore"
]

# Ruff configuration

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TCH"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true